<package format="2">
  <name>ati_sensor_description</name>
  <version>0.1.0</version>
  <description>This package provides a description and a gazebo simulation of ati force torque sensors.</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>
  <license>LGPLv3</license>

  <author>Guillaume Walck</author>
  <author>Denis Štogl</author>
  <author>Alexander Bubeck</author>

  <url type="website">https://github.com/ubi-agni/ati_sensor_description</url>
  <url type="bugtracker">https://github.com/ubi-agni/ati_sensor_description/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>gazebo_ros</depend>

  <exec_depend>xacro</exec_depend>

</package>
